:recycle: refactor: remove role references in accounts module
